--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,10 @@ dependencies:
   image_picker: ^1.1.2
   provider: ^6.1.2
   firebase_storage: ^12.1.1
-
+  custom_info_window: ^1.0.1
+  url_launcher: ^6.3.0
+  shared_preferences: ^2.2.3
+  http: ^1.2.2
 
 
 
